# avos

./: .gitignore  LICENSE  README.md  __main__.py  checkers.py  generate.py  pyproject.toml  sample_size_calculator.py  splitter.py  tests.py
examples/: assignments.py  layer.ipynb  service_workflow.py  srm.py  synthetic_split_check.py
examples/configs/v1/: checkout_flow.yml  homepage_hero.yml
examples/configs/v2/: checkout_flow.yml  homepage_hero.yml
src/avos/: __init__.py  checkers.py  config.py  constants.py  db_config.py  layer.py  main.py  sample_size_calculator.py  splitter.py  srm_tester.py  stat_tests.py
src/avos/models/: base.py  config_models.py  experiment.py  layer.py
src/avos/services/: assignment_logger.py  assignment_manager.py  assignment_service.py  config_sync.py  layer_service.py  splitter.py
src/avos/utils/: __main__.py  config_loader.py  datetime_utils.py  generate.py  helpers.py  splitter.py
tests/: test_assignment_logger.py  test_assignment_service.py  test_config.py  test_config_loader.py  test_config_models.py  test_config_sync.py  test_dummy.py  test_experiment.py  test_layer.py  test_layer_service.py  test_splitter.py  test_splitter_synthetic.py  test_srm_tester.py  test_stat_tests.py
