[project]
name = "avos"
version = "0.1.0"
description = "A/B testing platform"
readme = "README.md"
authors = [
    { name = "Roman Lunev", email = "r.v.lunev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest", "black", "flake8"
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 120
