[project]
name = "avos"
version = "0.1.0"
description = "A/B testing platform"
readme = "README.md"
authors = [
    { name = "Roman Lunev", email = "r.v.lunev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.16.1",
    "sqlalchemy>=2.0.43",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 120
